[tool.poetry]
name = "rl-ingestor"
version = "0.1.0"
description = ""
authors = ["John Sturgeon <john.sturgeon@me.com>"]
readme = "README.md"
packages = [{include = "rl_ingestor"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"
doppler-env = "^0.3.0"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
pycurl = "^7.45.1"
jinja2 = "^3.1.2"
arrow = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
